# jetson-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: config.yaml
docs/: API.md  JETSON_PREP.md  MODELS.md  SETUP.md  TROUBLESHOOTING.md
scripts/: benchmark.py  docker_run.sh  download_models.sh  setup_jetson.sh  start_server.sh
src/: config.py  main.py  model_manager.py
src/routes/: health.py  image.py  system.py  text.py
src/services/: image_classifier.py  object_detector.py  text_embedder.py  text_generator.py
src/static/: index.html
